# gtkcalendarentry

./: .gitignore  Makefile.am  README  README.md  configure.ac  gtkcalendarentry.c  gtkcalendarentry.h
docs/reference/: GtkCalendar-docs.xml  GtkCalendar-sections.txt  Makefile.am
m4/: .gitignore
src/: Makefile.am  gtkcalendarentry.c  gtkcalendarentry.h
