#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ(2.61)
AC_INIT(gtkcalendarentry,0.1)
AC_CONFIG_SRCDIR([gtkcalendarentry.c])
AC_CONFIG_HEADER([../config.h])
AM_INIT_AUTOMAKE

AC_PROG_LIBTOOL

# Checks for library functions.

AC_CONFIG_FILES([Makefile])
AC_OUTPUT
